# coral

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: docs.yml
coral-cli/: Cargo.toml
coral-cli/src/: main.rs
coral-cli/tests/cmd/: init.trycmd
coral-docs/: Cargo.toml  README.md
coral-docs/src/: main.rs
coral-example/libraries/cargo-library-a/: Cargo.toml
coral-example/libraries/cargo-library-b/: Cargo.toml
coral-example/libraries/poetry-library-a/: pyproject.toml
coral-example/libraries/poetry-library-b/: pyproject.toml
coral-example/projects/node-project/: package-lock.json  package.json
coral-example/projects/poetry-project/: pyproject.toml
